@@ -1,29 +1,0 @@
-######## Customize these Values ##########
-print_title: "Jekyll How-to Guide"
-print_subtitle: Version 1.0
-sidebar: jekyllhowto
-folder_path: /Users/tomjoht/projects/multioutput/github-jekyll-doc-project/_site
-title_page_image: docs/jekyllhowto/images/company_logo_big.png
-copyright_notice: >
-  This is the copyright notice...
-########
-
-
-format: pdf
-
-defaults:
-  -
-    scope:
-      path: ""
-      type: pages
-    values:
-      layout: printpdf
-  -
-    scope:
-      path: ""
-      type: docs
-    values:
-      layout: printpdf
-
-image_path: images
-audio_path: audio
