@@ -1,16 +1,32 @@
     <!-- This is the post loop - each post will be output using this markup -->
     {% for post in site.posts %}
-	{% if post.tags contains page.tag %}
-    <article class="post post-index">
-        <header class="post-header">
-            <h2 class="post-title"><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h2>
-        </header>
-        <section class="post-excerpt">
-            <p>{{ post.content | strip_html | truncatewords: 26 }} <a class="read-more" href="{{ post.url | relative_url }}" >&raquo;</a></p>
-        </section>
-        <div class="post-meta">
-			<time class="post-date" datetime="{{ post.date | date: site.uistring.datetime_format }}">{{ post.date | date_to_string }}</time>
-        </footer>
-    </article>
-	{% endif %}
+		{% if page.class contains "tag" %}
+			{% if post.tags contains page.tag %}
+			<article class="post post-index">
+				<header class="post-header">
+					<h2 class="post-title"><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h2>
+				</header>
+				<section class="post-excerpt">
+					<p>{{ post.content | strip_html | truncatewords: 26 }} <a class="read-more" href="{{ post.url | relative_url }}" >&raquo;</a></p>
+				</section>
+				<div class="post-meta">
+					<time class="post-date" datetime="{{ post.date | date: site.uistring.datetime_format }}">{{ post.date | date_to_string }}</time>
+				</footer>
+			</article>
+			{% endif %}
+		{% elsif page.class contains "topic" %}
+			{% if post.topics contains page.topics %}
+			<article class="post post-index">
+				<header class="post-header">
+					<h2 class="post-title"><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h2>
+				</header>
+				<section class="post-excerpt">
+					<p>{{ post.content | strip_html | truncatewords: 26 }} <a class="read-more" href="{{ post.url | relative_url }}" >&raquo;</a></p>
+				</section>
+				<div class="post-meta">
+					<time class="post-date" datetime="{{ post.date | date: site.uistring.datetime_format }}">{{ post.date | date_to_string }}</time>
+				</footer>
+			</article>
+			{% endif %}
+		{% endif %}
     {% endfor %}
