@@ -1,6 +1,6 @@
 ---
-class: 'tag-template'
-current: tag
+class: 'topic-template'
+current: topics
 sidebar: posts
 include_sidebar: true
 photo: assets/tags.png
@@ -10,6 +10,7 @@ show_tags: true
 
 {% include topnav.html %}
 <div class="container">
+
         <div class="row row-offcanvas row-offcanvas-left">
 
             <!-- sidebar -->
@@ -20,21 +21,24 @@ show_tags: true
 
             </div>
 			{% endif %}
-			
-            <!-- main area TTTTTT -->
+
+            <!-- main areaXXXXXXXX -->
 			{% unless page.include_sidebar %}
 				<div class="col-xs-12 col-sm-9 main main-no-sidebar">
 			{% else %}
 				<div class="col-xs-12 col-sm-9 main">
 			{% endunless %}
 
-                    <h1 class="page-title-h1">Posts tagged "{{page.tag | capitalize }}"</h1>
+                    <h1 class="page-title-h1">Posts about {{page.topics | capitalize }}</h1>
                 
+
+						<!-- The main content area on the homepage -->
 						<main id="content" class="content menu-animate" role="main">
 
-						{% include loop.html %}
+							<!-- The tag below includes the post loop - partials/loop.hbs -->
+							{% include loop.html %}
 
-					</main>
+						</main>
             </div>
         </div><!--/.container-->
 
