@@ -1,0 +1,16 @@
+---
+layout: atom
+title: nil
+---
+{% for post in page.posts %}
+	<item>
+	  <title>{{ post.title }}</title>
+	  <link>{{ site.baseurl }}{{ post.url }}</link>
+	  <author>{{ site.author }}</author>
+	  <pubDate>{{ post.date | date_to_xmlschema }}</pubDate>
+	  <guid>{{ site.baseurl }}{{ post.url }}</guid>
+	  <description><![CDATA[
+	     {{ post.content | expand_urls : site.url }}
+	  ]]></description>
+	</item>
+{% endfor %}
