@@ -3,8 +3,8 @@ title:  "Godot Accessibility Tutorial #1 - How to Build Basic Accessible Menus a
 summary: "A demonstration on how to build some basic accessible interfaces in Godot 3.5."
 date:   2023-02-22 01:44:05 -0500
 tags: game
-subject: psychoanalysis
-authors: guattari freud
+topics: psychoanalysis
+about-authors: guattari freud
 ---
 
 # Godot Accessibility Tutorial #1 - How to Build Basic Blind Accessible Menus and Interfaces
