@@ -729,8 +729,16 @@
 	}
 	
 	blockquote {
-		background-image: linear-gradient(145deg, #222222FF 0%, #000000FF 50%);
 		box-shadow: 3px 3px 4px #111;
+	}
+	
+	img {
+		box-shadow: 0px 0px 15px #111;
+	}
+
+	.nobg img {
+		background-image: none;
+		box-shadow: none;
 	}
 		
 	.post-meta {
