@@ -499,3 +499,7 @@ blockquote {
 	margin-bottom: 30px;
 	padding-bottom: 15px;
 }
+
+img {
+	border-radius: 5px;
+}
