@@ -182,3 +182,9 @@ ul#docnavsidebar li a:focus {
 	font-size: 16px;
 	font-weight: bold;
 }
+
+/* prevents sidebar from showing outside link button */
+.mydocsidebar a[href^="http://"]:after, a[href^="https://"]:after 
+{
+    content: "";
+}
