@@ -1,5 +1,7 @@
 9-15-2024:
 - Improved search screen UI.
+- Added blog generation.
+- Allowed sorting of blog posts by tag, topic and about-author
 
 9-14-2024:
 - Removed Github button.
